# appindicator-sharp

./: AUTHORS  Makefile.am  README.md  appindicator3-sharp-0.1.pc.in  configure.ac
doc/: Makefile.am
sources/: Makefile.am  appindicator3-sharp-api.raw  appindicator3-sharp.snk
sources/glue/: Makefile.am
